# CharFiller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: super-linter.yml
CharFiller-CMake/: CMakeLists.txt  CMakeSettings.json
CharFiller-CMake/src/: CMakeLists.txt  Main.cpp
CharFiller-CMake/src/UI/: CMakeLists.txt
CharFiller-CMake/src/UI/ProgressBar/: ProgressBar.h
CharFiller-CMake/src/Util/Files/: Files.cpp
CharFiller_S/: CharFiller_S.sln
CharFiller_S/CharFiller/: CharFiller.vcxproj
CharFiller_S/CharFiller/src/: Main.cpp
src/: Main.cpp
src/UI/ProgressBar/: ProgressBar.cpp
src/Util/Files/: Files.h
src/lib/: CMakeLists.txt
src/lib/Files/: Files.cpp  Files.h
src/lib/libcharfiller/Files/: Files.cpp  Files.h
